# inscope

./: .gitignore  Cargo.toml  README.md  testips.txt
src/: main.rs
